--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -56,6 +56,14 @@
         margin: 0 0.1rem;
     }
 }
+@media screen and (max-width: 400px) {
+    .options{
+        margin: 0;
+    }
+    .account, .cart, .seller{
+        margin: 0.1rem 0.1rem 0 0.1rem;
+    }
+}
 p{
     font-size: 15px;
 }
